add icons in the skills section

--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
     <!-- Header -->
     <header id="header">
       <div class="intro">
-        <div class="container">
-          <!-- <div class="row"> -->
+        <div class="container-fluid">
           <div class="intro-text">
-            <h2 class="text-left">Hello, I'm <span class="name">Esther Muchai</span></h2>
-            <p>Web Developer/Designer</p>
-            <!-- </div> -->
+            <h2 class="text-left">Hello,</h2>
+            <h2 class="name">I'm Esther Muchai</h2>
+            <h3>Web Developer/Designer</h3>
           </div>
         </div>
     </header>
@@ -79,13 +78,16 @@
       <div class="container">
         <div class="section-title text-center center">
           <h2>About Me</h2>
-          <hr>
+          <hr> <br>
         </div>
         <div class="row">
           <div class="col-md-12 text-center"></div>
           <div class="col-md-8 col-md-offset-2">
             <div class="about-text">
-              <h4>I'm a Full Stuck Web Developer and UI/UX specialist. In the basic sense, I solve common and not so common , business problems using design and code.</h4>
+              <h4>I'm a Full Stuck Web Developer and UI/UX specialist. <br>In the basic sense, I solve common and not so common , business problems using design and code.</h4><br>
+              <h4>I enjoy bridging the gap between engineering and design — combining my technical knowledge with my keen eye for design to create a beautiful product.
+                <br>My goal is to always build applications that are scalable and efficient.</h4> <br>
+              <h4>The devil is in the detail, which is why it's important for me to not only be creative but also to pay meticulous attention to detail so my clients get the results they want.</h4>
             </div>
           </div>
         </div>
@@ -93,29 +95,33 @@
     </div>
 
     <!-- Skills Section -->
-    <div id="skills" class="text-center">
+    <div id="skills">
       <div class="container-fluid">
         <div class="section-title center">
-          <h2>Skills</h2>
+          <h2 class="text-center">Skills</h2>
           <hr>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h3><strong>Front-End Developer</strong></h3>
             <h4>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h4>
             <h3><strong>Back-end Developer</strong></h3>
             <h4>Incorporated Python frameworks in my projects such as Django and Flask</h4>
           </div>
-          <div class="col-md-8"></div>
-          <div class="social">
-            <ul>
-              <li><img src="img/html5.png" class="img-responsive" alt="Project Title">HTML5</li>
-              <li><img src="img/css3.png" class="img-responsive" alt="Project Title">CSS3</li>
-              <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title">Bootstrap</li>
-              <li><img src="img/javascript.png" class="img-responsive" alt="Project Title">Javascript</li>
-              <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title">Flask</li>
-              <li><img src="img/django.png" class="img-responsive" alt="Project Title">Django</li>
-            </ul>
+          <div class="col-md-2"></div>
+          <div class="col-md-4">
+            <div class="social">
+              <ul>
+                <li><img src="img/html5.png" class="img-responsive" alt="Project Title" height="100" width="100">HTML5</li>
+                <li><img src="img/css3.png" class="img-responsive" alt="Project Title" height="100" width="100">CSS3</li>
+                <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title" height="100" width="100">Bootstrap</li>
+                <li><img src="img/javascript.png" class="img-responsive" alt="Project Title" height="100" width="100">Javascript</li> <br>
+                <li><img src="img/postgresql .png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                <li><img src="img/sybase.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                <li><img src="img/django.png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -146,7 +152,8 @@
               <div class="portfolio-item">
                 <div class="hover-bg">
                   <h4>
-                      <a href="img/portfolio/01-large.jpg" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto"></h4>
+                      <a href="img/portfolio/01-large.jpg" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto">
+                      </h4>
                   <div class="hover-text">
                     <h4>Traffic Tracker</h4>
                     <small>This is a simple Web application that allows users to track traffic on specified routes.</small> </div>
@@ -198,21 +205,16 @@
       <div class="container-fluid">
         <div class="row">
           <h2>Contact</h2>
-          <div class="col-md-6">
-            <i class="fa fa-map-marker fa-2x"></i>
-            <p><i class="fa fa-envelope-o fa-2x"></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
-          </div>
-          <div class="col-md-6">
-            <div class="social">
-              <ul>
-                <li><a href="https://github.com/mwerumuchai"><i class="fa fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-            </div>
+          <i class="fa fa-map-marker fa-2x"></i>
+          <p><i class="fa fa-envelope-o fa-2x"></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
+          <div class="social">
+            <ul>
+              <li><a href="https://github.com/mwerumuchai"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
           </div>
         </div>
       </div>
-    </div>
     </div>
     <div id="footer">
       <div class="container text-center">
