--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -137,64 +138,63 @@
         </div>
 
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-          <img src="img/projects/traft.png" class="img-responsive" alt="Traffic Tracker" height="250" width="250">
+        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
+          <i class="fa fa-truck" aria-hidden="true"></i><i class="fa fa-truck" aria-hidden="true"></i><i class="fa fa-truck" aria-hidden="true"></i>
           <h4>Traffic Tracker</h4>
-          </button>
-
+        </a>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header"> <br>
                 <h5 class="modal-title" id="exampleModalLabel">Traffic Tracker</h5>
+              </div> <br>
+              <div class="modal-body">
+                <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
+                <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
+                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a></H4>
+              </div>
+              <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" height="490" width="540px">
-                <h3>This is a simple Web application that allows users to track traffic on specified routes.</h3>
-                <h2><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a></h2>
-              </div>
-              <div class=" modal-footer ">
-                <p>Technologies used: Ember, Firebase, GoogleMap, Twitter API</p>
               </div>
             </div>
           </div>
         </div>
         <!-- Project 2 -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
-          <img src="img/projects/camera.png" class="img-responsive" alt="Traffic Tracker" height="250" width="250">
+        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
+          <i class="fa fa-camera fa-4x" aria-hidden="true"></i>
           <h4>Unsplash-Clone</h4>
-          </button>
+        </a>
 
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal1" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
+        <div class="modal fade" id="exampleModal1" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header"> <br>
                 <h5 class="modal-title" id="exampleModalLabel">Unsplash-Clone</h5>
+              </div> <br>
+              <div class="modal-body">
+                <img src="img/projects/unsplash.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <H4>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</H4>
+                <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
+                <H4><a href="https://unsplash-clone2.herokuapp.com/">View Site</a></H4>
+              </div>
+              <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/projects/unsplash.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" height="490" width="540px">
-                <h3>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</h3>
-                <h2><a href="https://unsplash-clone2.herokuapp.com/">View Site</a></h2>
-              </div>
-              <div class=" modal-footer ">
-                <p>Technologies used: Ember, Firebase, GoogleMap, Twitter API</p>
               </div>
             </div>
           </div>
         </div>
         <!-- Project 3 -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
-          <img src="img/projects/jeep.png" class="img-responsive" alt="Traffic Tracker" height="250" width="250">
+        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
+          <i class="fa fa-car fa-4x" aria-hidden="true"></i>
           <h4>Autos</h4>
-          </button>
+        </a>
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal2" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
@@ -202,17 +202,17 @@
             <div class="modal-content">
               <div class="modal-header"> <br>
                 <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
+              </div> <br>
+              <div class="modal-body">
+                <img src="img/projects/autos.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <H4>This application helps users to view more details about cars and be able to rate them.</H4>
+                <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
+                <H4><a href="https://mweru-autos.herokuapp.com/">View Site</a></H4>
+              </div>
+              <div class=" modal-footer">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/projects/autos.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" height="490" width="540px">
-                <h3>This application helps users to view more details about cars and be able to rate them.</h3>
-                <h2><a href="https://mweru-autos.herokuapp.com/">View Site</a></h2>
-              </div>
-              <div class=" modal-footer">
-                <p>Technologies used: Ember, Firebase, GoogleMap, Twitter API</p>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
     <!-- Contact Section -->
     <div id="contact" class="text-center">
       <div class="container-fluid ">
-        <div class="row ">
+        <div class="row">
           <h2>Contact</h2>
           <i class="fa fa-map-marker fa-2x "></i>
           <p><i class="fa fa-envelope-o fa-2x "></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
