makes changes to the background color and navbar

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="section-title text-center center">
           <h2>About Me</h2>
-          <hr> <br>
+          <hr>
         </div>
         <div class="row">
           <div class="col-md-12 text-center"></div>
@@ -136,36 +136,9 @@
           <h2>Projects</h2>
           <hr>
         </div>
-
-        <!-- Button trigger modal -->
-        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-truck" aria-hidden="true"></i><i class="fa fa-truck" aria-hidden="true"></i><i class="fa fa-truck" aria-hidden="true"></i>
-          <h4>Traffic Tracker</h4>
-        </a>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header"> <br>
-                <h5 class="modal-title" id="exampleModalLabel">Traffic Tracker</h5>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
-                <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a></H4>
-              </div>
-              <div class=" modal-footer ">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-            </div>
-          </div>
-        </div>
         <!-- Project 2 -->
         <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
-          <i class="fa fa-camera fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
           <h4>Unsplash-Clone</h4>
         </a>
 
@@ -190,9 +163,36 @@
             </div>
           </div>
         </div>
+
+        <!-- Button trigger modal -->
+        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
+          <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
+          <h4>Traffic Tracker</h4>
+        </a>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header"> <br>
+                <h5 class="modal-title" id="exampleModalLabel">Traffic Tracker</h5>
+              </div> <br>
+              <div class="modal-body">
+                <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
+                <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
+                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a></H4>
+              </div>
+              <div class=" modal-footer ">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Project 3 -->
         <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
-          <i class="fa fa-car fa-4x" aria-hidden="true"></i>
+          <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
           <h4>Autos</h4>
         </a>
 
