--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <img src="img/projects/unsplash.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</H4>
                 <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
-                <H4><a href="https://unsplash-clone2.herokuapp.com/">View Site</a></H4>
+                <H4><a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
               </div>
               <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -180,7 +180,7 @@
                 <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
                 <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/">View Site</a></H4>
+                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
               </div>
               <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -207,7 +207,7 @@
                 <img src="img/projects/autos.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This application helps users to view more details about cars and be able to rate them.</H4>
                 <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                <H4><a href="https://mweru-autos.herokuapp.com/">View Site</a></H4>
+                <H4><a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
               </div>
               <div class=" modal-footer">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -230,8 +230,8 @@
           <p><i class="fa fa-envelope-o fa-2x "></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
           <div class="social ">
             <ul>
-              <li><a href="https://github.com/mwerumuchai "><i class="fa fa-github"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/ "><i class="fa fa-linkedin "></i></a></li>
+              <li><a href="https://github.com/mwerumuchai " target="_blank"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/esther-mweru-913a4838/ " target="_blank"><i class="fa fa-linkedin "></i></a></li>
             </ul>
           </div>
         </div>
