--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
                 <h5 class="modal-title" id="exampleModalLabel">Unsplash-Clone</h5>
               </div> <br>
               <div class="modal-body">
-                <img src="img/projects/unsplash.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <img src="img/projects/unsplash.png" title="Technologies used: Flask, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</H4>
                 <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
+                <h4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank">Github Repository</h4>
                 <H4><a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
               </div>
               <div class=" modal-footer ">
@@ -180,7 +181,8 @@
                 <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
                 <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                <H4><a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
+                <h4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank">Github Repository</h4>
+                <H4>Deployed link: <a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
               </div>
               <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -204,10 +206,11 @@
                 <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
               </div> <br>
               <div class="modal-body">
-                <img src="img/projects/autos.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
+                <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This application helps users to view more details about cars and be able to rate them.</H4>
                 <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                <H4><a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
+                <h4><a href="https://github.com/mwerumuchai/autos" target="_blank">Github Repository</h4>
+                <h4><a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></h4>
               </div>
               <div class=" modal-footer">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -240,7 +243,7 @@
     <div id="footer">
       <div class="container text-center">
         <div class="fnav">
-          <p>Copyright &copy; 2017 Esther Muchai.</p>
+          <p>Copyright &copy; 2017 Esther Muchai. All rights reserved.</p>
         </div>
       </div>
     </div>
