--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -69,7 +70,7 @@
           <div class="intro-text">
             <h2 class="text-left">Hello,</h2>
             <h2 class="name">I'm Esther Muchai</h2>
-            <h3>Web Developer/Designer</h3>
+            <h3 class="web">Web Developer/Designer</h3>
           </div>
         </div>
     </header>
@@ -78,17 +79,17 @@
     <div id="about">
       <div class="container">
         <div class="section-title text-center center">
-          <h2>About Me</h2>
+          <h2 id="name">About Me</h2>
           <hr>
         </div>
         <div class="row">
           <div class="col-md-12 text-center"></div>
           <div class="col-md-8 col-md-offset-2">
             <div class="about-text">
-              <h4>I'm a Full Stuck Web Developer and UI/UX specialist. <br>In the basic sense, I solve common and not so common , business problems using design and code.</h4><br>
-              <h4>I enjoy bridging the gap between engineering and design — combining my technical knowledge with my keen eye for design to create a beautiful product.
-                <br>My goal is to always build applications that are scalable and efficient.</h4> <br>
-              <h4>The devil is in the detail, which is why it's important for me to not only be creative but also to pay meticulous attention to detail so my clients get the results they want.</h4>
+              <h3>I'm a Full Stuck Web Developer and UI/UX specialist. <br>In the basic sense, I solve common and not so common , business problems using design and code.</h3><br>
+              <h3>I enjoy bridging the gap between engineering and design — combining my technical knowledge with my keen eye for design to create a beautiful product.
+                <br>My goal is to always build applications that are scalable and efficient.</h3> <br>
+              <h3>The devil is in the detail, which is why it's important for me to not only be creative but also to pay meticulous attention to detail so my clients get the results they want.</h3>
             </div>
           </div>
         </div>
@@ -99,29 +100,34 @@
     <div id="skills">
       <div class="container-fluid">
         <div class="section-title center">
-          <h2 class="text-center">Skills</h2>
+          <h2 class="text-center" id="name">Skills</h2>
           <hr>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <h3><strong>Front-End Developer</strong></h3>
-            <h4>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h4>
-            <h3><strong>Back-end Developer</strong></h3>
-            <h4>Incorporated Python frameworks in my projects such as Django and Flask</h4>
+          <div class="col-md-1"></div>
+          <div class="col-md-5">
+            <h2><strong>Front-End Developer</strong></h2>
+            <h3>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h3>
+            <h2><strong>Back-end Developer</strong></h2>
+            <h3>Incorporated Python frameworks in my projects such as Django and Flask</h3>
           </div>
           <div class="col-md-2"></div>
           <div class="col-md-4">
             <div class="social">
-              <ul>
-                <li><img src="img/html5.png" class="img-responsive" alt="Project Title" height="100" width="100">HTML5</li>
-                <li><img src="img/css3.png" class="img-responsive" alt="Project Title" height="100" width="100">CSS3</li>
-                <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title" height="100" width="100">Bootstrap</li>
-                <li><img src="img/javascript.png" class="img-responsive" alt="Project Title" height="100" width="100">Javascript</li> <br>
-                <li><img src="img/postgresql .png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
-                <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
-                <li><img src="img/sybase.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
-                <li><img src="img/django.png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
-              </ul>
+              <div class="portfolio-item">
+                <div class="hover-bg">
+                  <ul>
+                    <li><img src="img/html5.png" class="img-responsive" alt="Project Title" height="100" width="100" rotate="90">HTML5</li>
+                    <li><img src="img/css3.png" class="img-responsive" alt="Project Title" height="100" width="100">CSS3</li>
+                    <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title" height="100" width="100">Bootstrap</li>
+                    <li><img src="img/javascript.png" class="img-responsive" alt="Project Title" height="100" width="100">Javascript</li> <br>
+                    <li><img src="img/postgresql .png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                    <li><img src="img/flask.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                    <li><img src="img/sybase.jpeg" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                    <li><img src="img/django.png" class="img-responsive" alt="Project Title" height="100" width="100"></li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -133,13 +139,17 @@
     <div id="portfolio">
       <div class="container">
         <div class="section-title text-center center">
-          <h2>Projects</h2>
+          <h2 id="name">Projects</h2>
           <hr>
         </div>
         <!-- Project 2 -->
         <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal1">
-          <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
-          <h4>Unsplash-Clone</h4>
+          <div class="portfolio-item">
+            <div class="hover-bg">
+              <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
+              <h4>Unsplash-Clone</h4>
+            </div>
+          </div>
         </a>
 
         <!-- Modal -->
@@ -151,10 +161,11 @@
               </div> <br>
               <div class="modal-body">
                 <img src="img/projects/unsplash.png" title="Technologies used: Flask, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This is a cloned web application for unsplash where users can upload photos and download photos from other users.</H4>
+                <H4>This is a cloned web application for unsplash where users can upload and download photos from other users.</H4>
                 <H4>Technologies used: Flask, Heroku, HTML, CSS</H4>
-                <h4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank">Github Repository</h4>
-                <H4><a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
+                <H4><a href="https://github.com/mwerumuchai/unsplash-clone" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                <a href="https://unsplash-clone2.herokuapp.com/" target="_blank">View Site</a></H4>
+                </span>
               </div>
               <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -167,8 +178,12 @@
 
         <!-- Button trigger modal -->
         <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
-          <h4>Traffic Tracker</h4>
+          <div class="portfolio-item">
+            <div class="hover-bg">
+              <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
+              <h4>Traffic Tracker</h4>
+            </div>
+          </div>
         </a>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
@@ -181,8 +196,9 @@
                 <img src="img/portfolio/tt-desc2.png" title="Technologies used: Ember, Firebase, GoogleMap, Twitter API" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This is a simple Web application that allows users to track traffic on specified routes.</H4>
                 <H4>Technologies used: Ember, Firebase, GoogleMap, Twitter API</H4>
-                <h4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank">Github Repository</h4>
-                <H4>Deployed link: <a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
+                <H4><a href="https://github.com/mwerumuchai/traffic-tracker" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                <a href="https://traffic-tracker-70c62.firebaseapp.com/" target="_blank">View Site</a></H4>
+                </span>
               </div>
               <div class=" modal-footer ">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -194,8 +210,12 @@
         </div>
         <!-- Project 3 -->
         <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
-          <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
-          <h4>Autos</h4>
+          <div class="portfolio-item">
+            <div class="hover-bg">
+              <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
+              <h4>Autos</h4>
+            </div>
+          </div>
         </a>
 
         <!-- Modal -->
@@ -209,8 +229,9 @@
                 <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
                 <H4>This application helps users to view more details about cars and be able to rate them.</H4>
                 <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                <h4><a href="https://github.com/mwerumuchai/autos" target="_blank">Github Repository</h4>
-                <h4><a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></h4>
+                <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                <a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
+                </span>
               </div>
               <div class=" modal-footer">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -228,9 +249,9 @@
     <div id="contact" class="text-center">
       <div class="container-fluid ">
         <div class="row">
-          <h2>Contact</h2>
+          <h2 id="name">Contact</h2>
           <i class="fa fa-map-marker fa-2x "></i>
-          <p><i class="fa fa-envelope-o fa-2x "></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></p>
+          <h3 id="mail"><i class="fa fa-envelope-o fa-2x "></i><a href="mailto:mwerumuchai@gmail.com" target="_top">mwerumuchai@gmail.com</a></h3>
           <div class="social ">
             <ul>
               <li><a href="https://github.com/mwerumuchai " target="_blank"><i class="fa fa-github"></i></a></li>
