--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -104,20 +104,19 @@
           <hr>
         </div>
         <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-5">
+          <div class="col-md-6">
             <h2><strong>Front-End Developer</strong></h2>
             <h3>I have developed, maintained and launched various projects by using CSS3, Bootstrap, HTML5 and Javascript. Knowledge of open source JS libraries like jQuery </h3>
             <h2><strong>Back-end Developer</strong></h2>
             <h3>Incorporated Python frameworks in my projects such as Django and Flask</h3>
           </div>
-          <div class="col-md-2"></div>
-          <div class="col-md-4">
+          <div class="col-md-1"></div>
+          <div class="col-md-5">
             <div class="social">
               <div class="portfolio-item">
                 <div class="hover-bg">
                   <ul>
-                    <li><img src="img/html5.png" class="img-responsive" alt="Project Title" height="100" width="100" rotate="90">HTML5</li>
+                    <li><img src="img/html5.png" class="img-responsive" alt="Project Title" height="100" width="100">HTML5</li>
                     <li><img src="img/css3.png" class="img-responsive" alt="Project Title" height="100" width="100">CSS3</li>
                     <li><img src="img/bootstrap.png" class="img-responsive" alt="Project Title" height="100" width="100">Bootstrap</li>
                     <li><img src="img/javascript.png" class="img-responsive" alt="Project Title" height="100" width="100">Javascript</li> <br>
@@ -137,7 +136,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-      <div class="container">
+      <div class="container-fuild">
         <div class="section-title text-center center">
           <h2 id="name">Projects</h2>
           <hr>
@@ -214,6 +213,39 @@
             <div class="hover-bg">
               <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
               <h4>Autos</h4>
+            </div>
+          </div>
+        </a>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal2" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header"> <br>
+                <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
+              </div> <br>
+              <div class="modal-body">
+                <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
+                <H4>This application helps users to view more details about cars and be able to rate them.</H4>
+                <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
+                <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
+                <a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
+                </span>
+              </div>
+              <div class=" modal-footer">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Project 4 -->
+        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
+          <div class="portfolio-item">
+            <div class="hover-bg">
+              <i class="fa fa-github" style="font-size: 180px;" aria-hidden="true"></i>
+              <h4>Github</h4>
             </div>
           </div>
         </a>
