--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-      <div class="container-fuild">
+      <div class="container">
         <div class="section-title text-center center">
           <h2 id="name">Projects</h2>
           <hr>
@@ -152,7 +152,7 @@
         </a>
 
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal1" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal1" tabindex="-4" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header"> <br>
@@ -213,39 +213,6 @@
             <div class="hover-bg">
               <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
               <h4>Autos</h4>
-            </div>
-          </div>
-        </a>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal2" tabindex="-5" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" height="90px" width="650px">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header"> <br>
-                <h5 class="modal-title" id="exampleModalLabel">Autos</h5>
-              </div> <br>
-              <div class="modal-body">
-                <img src="img/projects/autos.png" title="Technologies used: Django, Heroku, HTML, CSS" rel="prettyPhoto" width="550" class="img-responsive">
-                <H4>This application helps users to view more details about cars and be able to rate them.</H4>
-                <H4>Technologies used: Django, Heroku, HTML, CSS</H4>
-                <H4><a href="https://github.com/mwerumuchai/autos" target="_blank"><i class="fa fa-github"></i> <span class="site">
-                <a href="https://mweru-autos.herokuapp.com/" target="_blank">View Site</a></H4>
-                </span>
-              </div>
-              <div class=" modal-footer">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Project 4 -->
-        <a class="btn" href="#" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal2">
-          <div class="portfolio-item">
-            <div class="hover-bg">
-              <i class="fa fa-github" style="font-size: 180px;" aria-hidden="true"></i>
-              <h4>Github</h4>
             </div>
           </div>
         </a>
