--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3 class="web">Web Developer/Designer</h3>
           </div>
         </div> <br>
-        <a class="page-scroll" href="#about" aria-hidden="true"><i class="fa fa-chevron-down"></i></a>
+        <a class="page-scroll" href="#about" aria-hidden="true"><i class="fa fa-chevron-down bounce"></i></a>
       </div>
     </header>
 
@@ -93,7 +93,7 @@
 
     <!-- Skills Section -->
     <div id="skills">
-      <div class="container">
+      <div class="container-fluid">
         <div class="section-title center">
           <h2 class="text-center" id="name">Skills</h2>
           <hr>
