--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="intro">
         <div class="container-fluid" id="cfluid">
           <div class="intro-text">
-            <h2 class="text-left" id="name">Hello,</h2>
+            <h1 class="text-left" id="name">Hello,</h1>
             <h2 class="name">I'm Esther Muchai</h2>
             <h3 class="web">Web Developer/Designer</h3>
           </div> <br>
@@ -127,7 +127,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-      <div class="container text-center">
+      <div class="container-fluid text-center">
         <div class="section-title text-center center">
           <h2 id="name">Projects</h2>
           <hr>
@@ -138,7 +138,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-camera fa-2x" style="font-size: 180px;" aria-hidden="true"></i>
-                <h4>Unsplash-Clone</h4>
+                <h3>Unsplash-Clone</h3>
               </div>
             </div>
           </a>
@@ -172,7 +172,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-truck" style="font-size: 190px;" aria-hidden="true"></i>
-                <h4>Traffic Tracker</h4>
+                <h3>Traffic Tracker</h3>
               </div>
             </div>
           </a>
@@ -204,7 +204,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-car" style="font-size: 180px;" aria-hidden="true"></i>
-                <h4>Autos</h4>
+                <h3>Autos</h3>
               </div>
             </div>
           </a>
@@ -237,7 +237,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-instagram" style="font-size: 200px;" aria-hidden="true"></i>
-                <h4>Instagram-Clone</h4>
+                <h3>Instagram-Clone</h3>
               </div>
             </div>
           </a>
@@ -270,7 +270,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-microphone" style="font-size: 200px;" aria-hidden="true"></i>
-                <h4>One Minute Pitch</h4>
+                <h3>One Minute Pitch</h3>
               </div>
             </div>
           </a>
@@ -304,7 +304,7 @@
             <div class="portfolio-item">
               <div class="hover-bg">
                 <i class="fa fa-commenting" style="font-size: 200px;" aria-hidden="true"></i>
-                <h4>Message Board</h4>
+                <h3>Message Board</h3>
               </div>
             </div>
           </a>
